# signaling

./: CMakeLists.txt  README.md
client/: index.html
conf/: log.conf
src/: connectionPool.cpp  connectionPool.h  context.h  main.cpp  operate.h  peer.cpp  peer.h  peerManager.cpp  peerManager.h  peerStatus.cpp  peerStatus.h  producerConsumerQueue.h  room.cpp  room.h  roomManager.cpp  roomManager.h  session.cpp  session.h  sessionDumper.cpp  sessionDumper.h  sessionInterface.h  sigServer.cpp  sigServer.h  type.h  util.cpp  util.h  workerPool.cpp  workerPool.h
